# the_volt

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_WORKLOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
Desktop/the_volt_system/: AutoData_Analyst_v1_aymen.polished.ipynb  DOCKER_SETUP.md  IMPLEMENTATION_WORKLOG.md  docker-compose.yml  large_collect_result.txt  model_registry.db  (+3 more)
agents/: __init__.py  base.py
api/: __init__.py
core/: __init__.py  contract.py
data_api/: __init__.py
data_layer/: __init__.py
docs/: CODE_GUIDE.md  DEEP_SYSTEM_STATE_2026-03-29.md  DEPLOYMENT.md  look_khaled.md  the volt 0.2.md  the volt 3.md
documentation/: IMPLEMENTATION_WORKLOG.md  SYSTEM_DOCUMENTATION.md  SYSTEM_PERFORMANCE_DEEP_ANALYSIS.md  VOLT_CONTROL_PLANE_BACKLOG.md  project_analysis.md  the start of the volt.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
infrastructure/: __init__.py
models/: __init__.py
orchestration/: __init__.py  agent_orchestrator.py  event_bus.py  orchestrator.py  supervisor.py  workflow_manager.py
tests/: conftest.py  test_brain_shadow.py  test_configuration_integrity.py  test_exceptions.py  test_execution_gateway.py  test_execution_strategy.py  test_hybrid_collectors.py  test_notebook_shadow.py  test_package_exports.py  test_portfolio_risk.py  test_realtime_decision_loop.py  test_realtime_feature_cache.py  test_realtime_runtime_service.py  test_settings.py  test_storage.py  test_trading_math.py
trading_engine/: __init__.py
(+191 files in other folders)
